# guidedbilateral

./: CMakeLists.txt  README.md  cpu_main.cpp  gpu_main.cu
input_images/: hudson_diatomE-Guide.pgm  hudson_diatomE.pgm  peppers-Guide.ppm  peppers.ppm
legacy/: README  bilateralfilter.m  bilateralfilter_mex.c  guidedbilateralfilter.m  guidedbilateralfilter_mex.c  jointcrossbilateralfilter.m  jointcrossbilateralfilter_mex.c  psnr.m  pythoncall.ipynb  robustbilateralfilter.m  robustbilateralfilter_mex.c  run_test.m  saltpepper.m
